#54: arg -> tf_arg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,10 +14,6 @@ S3method(Ops,tf)
 S3method(Ops,tfb)
 S3method(Ops,tfd)
 S3method(Summary,tf)
-S3method(arg,default)
-S3method(arg,tfb)
-S3method(arg,tfd_irreg)
-S3method(arg,tfd_reg)
 S3method(as.data.frame,tfb)
 S3method(as.data.frame,tfd)
 S3method(as.function,tf)
@@ -60,6 +56,10 @@ S3method(smooth,default)
 S3method(smooth,tfb)
 S3method(smooth,tfd)
 S3method(summary,tf)
+S3method(tf_arg,default)
+S3method(tf_arg,tfb)
+S3method(tf_arg,tfd_irreg)
+S3method(tf_arg,tfd_reg)
 S3method(tf_count,default)
 S3method(tf_count,tfd_irreg)
 S3method(tf_count,tfd_reg)
@@ -100,7 +100,6 @@ export(GeomMeatballs)
 export(GeomSpaghetti)
 export(StatCapellini)
 export(StatTf)
-export(arg)
 export(as.tfb)
 export(as.tfd)
 export(funplot)
@@ -128,6 +127,7 @@ export(tf_approx_locf)
 export(tf_approx_nocb)
 export(tf_approx_none)
 export(tf_approx_spline)
+export(tf_arg)
 export(tf_basis)
 export(tf_count)
 export(tf_depth)
