#54: deriv -> tf_derive, integrate -> tf_integrate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,12 +29,7 @@ S3method(cumprod,tfb)
 S3method(cumprod,tfd)
 S3method(cumsum,tfb)
 S3method(cumsum,tfd)
-S3method(deriv,tfb)
-S3method(deriv,tfb_fpc)
-S3method(deriv,tfd)
 S3method(format,tf)
-S3method(integrate,tfb)
-S3method(integrate,tfd)
 S3method(is.finite,tf)
 S3method(is.na,tf)
 S3method(is.na,tfd_irreg)
@@ -65,6 +60,10 @@ S3method(tf_count,tfd_irreg)
 S3method(tf_count,tfd_reg)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
+S3method(tf_derive,default)
+S3method(tf_derive,tfb)
+S3method(tf_derive,tfb_fpc)
+S3method(tf_derive,tfd)
 S3method(tf_evaluate,data.frame)
 S3method(tf_evaluate,default)
 S3method(tf_evaluate,tfb)
@@ -73,6 +72,8 @@ S3method(tf_evaluations,default)
 S3method(tf_evaluations,tfb)
 S3method(tf_evaluations,tfd_irreg)
 S3method(tf_evaluations,tfd_reg)
+S3method(tf_integrate,tfb)
+S3method(tf_integrate,tfd)
 S3method(tf_zoom,tfb)
 S3method(tf_zoom,tfd)
 S3method(tfb,data.frame)
@@ -111,7 +112,6 @@ export(geom_meatballs)
 export(geom_spaghetti)
 export(gglasagna)
 export(in_range)
-export(integrate)
 export(is_irreg)
 export(is_tf)
 export(is_tfb)
@@ -131,11 +131,13 @@ export(tf_arg)
 export(tf_basis)
 export(tf_count)
 export(tf_depth)
+export(tf_derive)
 export(tf_domain)
 export(tf_evaluate)
 export(tf_evaluations)
 export(tf_evaluator)
 export(tf_gather)
+export(tf_integrate)
 export(tf_jiggle)
 export(tf_nest)
 export(tf_resolution)
@@ -184,7 +186,6 @@ importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
-importFrom(stats,deriv)
 importFrom(stats,lowess)
 importFrom(stats,median)
 importFrom(stats,na.omit)
