--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,9 +47,6 @@ S3method(quantile,tf)
 S3method(rev,tf)
 S3method(scale_type,tf)
 S3method(sd,tf)
-S3method(smooth,default)
-S3method(smooth,tfb)
-S3method(smooth,tfd)
 S3method(summary,tf)
 S3method(tf_arg,default)
 S3method(tf_arg,tfb)
@@ -74,6 +71,9 @@ S3method(tf_evaluations,tfd_irreg)
 S3method(tf_evaluations,tfd_reg)
 S3method(tf_integrate,tfb)
 S3method(tf_integrate,tfd)
+S3method(tf_smooth,default)
+S3method(tf_smooth,tfb)
+S3method(tf_smooth,tfd)
 S3method(tf_zoom,tfb)
 S3method(tf_zoom,tfd)
 S3method(tfb,data.frame)
@@ -117,7 +117,6 @@ export(is_tf)
 export(is_tfb)
 export(is_tfd)
 export(sd)
-export(smooth)
 export(stat_capellini)
 export(stat_tf)
 export(tf_anywhere)
@@ -142,6 +141,7 @@ export(tf_jiggle)
 export(tf_nest)
 export(tf_resolution)
 export(tf_rgp)
+export(tf_smooth)
 export(tf_sparsify)
 export(tf_spread)
 export(tf_unnest)
@@ -192,7 +192,6 @@ importFrom(stats,na.omit)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
-importFrom(stats,smooth)
 importFrom(stats,var)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
