re-export sd.default (..oopsies)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(print,tfd_reg)
 S3method(quantile,tf)
 S3method(rev,tf)
 S3method(scale_type,tf)
+S3method(sd,default)
 S3method(sd,tf)
 S3method(summary,tf)
 S3method(tf_arg,default)
