--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,8 +1,6 @@
 title: tidyfun
 url: https://fabian-s.github.io/tidyfun
-template:
-  params:
-    bootswatch: flatly
+
 reference:
   - title: "tf - (Sub)classes: Constructors & converters"
     desc: "Defining, evaluating and converting functional data objects"
@@ -20,6 +18,7 @@ reference:
       - index.tf
       - c.tf
       - tf_approx_linear
+      - tf_evaluate
       
   - title: "Arithmetic, logical and summary functions"
     desc: "Functionality for computing with and comparing functional data"
@@ -65,14 +64,14 @@ reference:
       - tf_jiggle
   
   - title: "Data Sets"
-     desc: "Functional data sets"
-     contents:
-       - chf_df
+    desc: "Functional data sets"
+    contents:
+      - chf_df
   
 articles:
   - title: "Articles"
     desc: "Articles & vignettes for tidyfun"
     contents:
-    - Intro
-    - Data_Manipulation
+    - 01_Intro
+    - 02_Data_Manipulation
 
