WIP: still fixing gglasagna

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -173,6 +173,10 @@ importFrom(graphics,image)
 importFrom(graphics,matlines)
 importFrom(graphics,matplot)
 importFrom(grid,gList)
+importFrom(grid,gpar)
+importFrom(grid,grobTree)
+importFrom(grid,textGrob)
+importFrom(grid,unit)
 importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
 importFrom(pillar,obj_sum)
