--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,16 +77,16 @@ S3method(tf_smooth,tfb)
 S3method(tf_smooth,tfd)
 S3method(tf_zoom,tfb)
 S3method(tf_zoom,tfd)
-S3method(tfb,data.frame)
-S3method(tfb,list)
-S3method(tfb,matrix)
-S3method(tfb,numeric)
-S3method(tfb,tfb)
-S3method(tfb,tfd)
 S3method(tfb_fpc,data.frame)
 S3method(tfb_fpc,matrix)
 S3method(tfb_fpc,numeric)
 S3method(tfb_fpc,tf)
+S3method(tfb_spline,data.frame)
+S3method(tfb_spline,list)
+S3method(tfb_spline,matrix)
+S3method(tfb_spline,numeric)
+S3method(tfb_spline,tfb)
+S3method(tfb_spline,tfd)
 S3method(tfd,data.frame)
 S3method(tfd,list)
 S3method(tfd,matrix)
