[WIP] refactor calculus for tfb_spline/tfb_fpc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,8 +59,8 @@ S3method(tf_count,tfd_reg)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
 S3method(tf_derive,default)
-S3method(tf_derive,tfb)
 S3method(tf_derive,tfb_fpc)
+S3method(tf_derive,tfb_spline)
 S3method(tf_derive,tfd)
 S3method(tf_evaluate,data.frame)
 S3method(tf_evaluate,default)
