tfb almost done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ S3method(tf_count,tfd_reg)
 S3method(tf_depth,matrix)
 S3method(tf_depth,tf)
 S3method(tf_derive,default)
+S3method(tf_derive,matrix)
 S3method(tf_derive,tfb_fpc)
 S3method(tf_derive,tfb_spline)
 S3method(tf_derive,tfd)
@@ -70,6 +71,8 @@ S3method(tf_evaluations,default)
 S3method(tf_evaluations,tfb)
 S3method(tf_evaluations,tfd_irreg)
 S3method(tf_evaluations,tfd_reg)
+S3method(tf_integrate,"function")
+S3method(tf_integrate,default)
 S3method(tf_integrate,tfb)
 S3method(tf_integrate,tfd)
 S3method(tf_smooth,default)
