--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,6 +190,7 @@ importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
+importFrom(stats,gaussian)
 importFrom(stats,lowess)
 importFrom(stats,median)
 importFrom(stats,na.omit)
