adds S4 defs for S3 classes inheriting from tf
closes #63

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,8 @@ importFrom(grid,gpar)
 importFrom(grid,grobTree)
 importFrom(grid,textGrob)
 importFrom(grid,unit)
+importFrom(methods,setClass)
+importFrom(methods,setOldClass)
 importFrom(modelr,seq_range)
 importFrom(mvtnorm,rmvnorm)
 importFrom(pillar,obj_sum)
