--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,13 +5,15 @@ Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com"
 Description: Provides S3 classes and methods for tidy functional data.
 Depends: R (>= 3.4)
 Imports:
-  checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, mvtnorm, mgcv, modelr, pillar, pracma, purrr, refund, rlang,
-  stats, stringr, tidyselect, tidyr, zoo
+  checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, methods, mvtnorm, mgcv, 
+  modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tidyselect, tidyr,
+  zoo
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Suggests: testthat, data.table, fda, knitr, rmarkdown, tidyverse, viridisLite, maps, scales
+Suggests: 
+  testthat, data.table, fda, knitr, rmarkdown, tidyverse, viridisLite, maps, scales
 Roxygen: list(markdown = TRUE)
 Collate:
     'approx.R'
@@ -34,11 +36,12 @@ Collate:
     'rng.R'
     'smooth.R'
     'summarize.R'
-    'tfb-class.R'
-    'tfb-fpc.R'
     'tfb-spline.R'
-    'tfb-utils.R'
+    'tfb-class.R'
     'tfd-class.R'
+    'tf-s4.R'
+    'tfb-fpc.R'
+    'tfb-utils.R'
     'tidyfun-package.r'
     'tidyr.R'
     'utils.R'
