--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,9 +2,10 @@ pandoc: 2.3.1
 pkgdown: 1.3.0
 pkgdown_sha: ~
 articles:
-  x01_Intro: x01_Intro.html
-  x02_Data_Manipulation: x02_Data_Manipulation.html
-  x03_Visualization: x03_Visualization.html
+  x01_tf_Vectors: x01_tf_Vectors.html
+  x02_Conversion: x02_Conversion.html
+  x03_Data_Wrangling: x03_Data_Wrangling.html
+  x04_Visualization: x04_Visualization.html
 urls:
   reference: https://fabian-s.github.io/tidyfun/reference
   article: https://fabian-s.github.io/tidyfun/articles
