--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Suggests: testthat, data.table, fda, knitr, rmarkdown, tidyverse, viridisLite, maps, scales, SemiPar, janitor, ALA, patchwork
+Suggests: testthat, data.table, fda, knitr, rmarkdown, tidyverse, viridisLite, maps, scales, SemiPar, janitor
 Roxygen: list(markdown = TRUE)
 Collate:
     'approx.R'
