finishes up fpc_wsvd for non-sparse data
(progress on #75)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,8 +40,9 @@ Collate:
     'tfb-class.R'
     'tfd-class.R'
     'tf-s4.R'
+    'tfb-fpc-utils.R'
     'tfb-fpc.R'
-    'tfb-utils.R'
+    'tfb-spline-utils.R'
     'tidyfun-package.r'
     'tidyr.R'
     'utils.R'
