--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ S3method(tf_smooth,default)
 S3method(tf_smooth,tfb)
 S3method(tf_smooth,tfd)
 S3method(tf_zoom,tfb)
+S3method(tf_zoom,tfb_fpc)
 S3method(tf_zoom,tfd)
 S3method(tfb_fpc,data.frame)
 S3method(tfb_fpc,matrix)
