--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Description: Provides S3 classes and methods for tidy functional data.
 Depends: R (>= 3.4)
 Imports:
   checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, methods, mvtnorm, mgcv, 
-  modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tidyselect, tidyr,
+  modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tidyselect, tidyr (>= 1.0.0),
   zoo
 License: GPL-3
 Encoding: UTF-8
