--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,17 @@ language: R
 sudo: false
 cache: packages
 
+matrix:
+  include:
+  - r: devel
+  - r: release
+
+r_github_packages:
+  - jimhester/covr
+
 after_success:
   - Rscript -e 'pkgdown::build_site()'
+  - Rscript -e 'covr::codecov(type="all", line_exclusions="R/zzz.R")'
 
 deploy:
   provider: pages
