--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,19 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: 
-  data.table, fda, janitor, gridExtra, knitr, maps, rmarkdown, scales, SemiPar, 
-  testthat, tidyverse, viridisLite
+    data.table,
+    fda,
+    janitor,
+    gridExtra,
+    knitr,
+    maps,
+    rmarkdown,
+    scales,
+    SemiPar,
+    testthat,
+    tidyverse,
+    viridisLite,
+    covr
 Roxygen: list(markdown = TRUE)
 Collate:
     'approx.R'
