update pkgdown for 0.0.82

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -79,3 +79,21 @@ articles:
     - x03_Data_Wrangling
     - x04_Visualization
 
+navbar:
+  type: default
+  left:
+  - text: Reference
+    href: reference/index.html
+  - text: Articles
+    menu:
+    - text: tf-Vectors and Operations
+      href: articles/x01_tf_Vectors.html
+    - text: Converting data to and from `tf`
+      href: articles/x02_Conversion.html
+    - text: Data Wrangling
+      href: articles/x03_Data_Wrangling.html
+    - text: Visulalization
+      href: articles/x04_Visualization.html
+
+development:
+  mode: auto
