--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 # produced vignettes
 vignettes/*.html
 vignettes/*.pdf
+vignettes/*.R
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 # knitr and R markdown default cache directories
@@ -25,5 +26,6 @@ vignettes/*.pdf
 *.knit.md
 .Rproj.user
 inst/doc
+
 # complete data files in /data-raw/
 /data-raw/*.csv
