--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,11 @@ Depends: R (>= 3.4)
 Imports:
   checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, methods, mvtnorm, mgcv, 
   modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tidyselect, tidyr (>= 1.0.0),
-  zoo
+  zoo, wavethresh
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.0.0
 Suggests: 
     data.table,
     fda,
@@ -55,6 +55,8 @@ Collate:
     'tfb-fpc-utils.R'
     'tfb-fpc.R'
     'tfb-spline-utils.R'
+    'tfb-wavelet-utils.R'
+    'tfb-wavelet.R'
     'tidyfun-package.r'
     'tidyr.R'
     'utils.R'
