--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Depends: R (>= 3.4)
 Imports:
   checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, methods, mvtnorm, mgcv, 
   modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tidyselect, tidyr (>= 1.0.0),
-  zoo, wavethresh
+  zoo, wavethresh, glmnet
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
