adding a vignette with info for other developers
putting this on the devel branch for now -- master branch doesn't pass checks due to breaks in `tf_nest` after `tidyr` interface update. also not sure if the vignette will magically appear in master branch when dev is merged ...

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -78,6 +78,7 @@ articles:
     - x02_Conversion
     - x03_Data_Wrangling
     - x04_Visualization
+    - x05_Advice
 
 navbar:
   type: default
@@ -94,6 +95,8 @@ navbar:
       href: articles/x03_Data_Wrangling.html
     - text: Visulalization
       href: articles/x04_Visualization.html
+    - text: Advice for Developers
+      href: articles/x05_Advice.html
 
 development:
   mode: auto
