whole bunch of vctrs stuff ...
- most of the concatenate code is now in tidyverse_vctrs, which is modeled off the sf package
- added some stuff that will generate prototypes of various classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,6 @@ S3method(as.data.frame,tfb)
 S3method(as.data.frame,tfd)
 S3method(as.function,tf)
 S3method(as.matrix,tfd)
-S3method(c,tfb)
-S3method(c,tfd)
 S3method(coef,tfb)
 S3method(cummax,tfb)
 S3method(cummax,tfd)
@@ -36,7 +34,6 @@ S3method(is.na,tfd_irreg)
 S3method(lines,tf)
 S3method(mean,tf)
 S3method(median,tf)
-S3method(merge,tf)
 S3method(plot,tf)
 S3method(points,tf)
 S3method(print,tf)
@@ -82,22 +79,31 @@ S3method(tf_zoom,tfb)
 S3method(tf_zoom,tfb_fpc)
 S3method(tf_zoom,tfd)
 S3method(tfb_fpc,data.frame)
+S3method(tfb_fpc,default)
 S3method(tfb_fpc,matrix)
 S3method(tfb_fpc,numeric)
 S3method(tfb_fpc,tf)
 S3method(tfb_spline,data.frame)
+S3method(tfb_spline,default)
 S3method(tfb_spline,list)
 S3method(tfb_spline,matrix)
 S3method(tfb_spline,numeric)
 S3method(tfb_spline,tfb)
 S3method(tfb_spline,tfd)
 S3method(tfd,data.frame)
+S3method(tfd,default)
 S3method(tfd,list)
 S3method(tfd,matrix)
 S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
+S3method(vec_cast.tfb,tfb)
+S3method(vec_cast.tfb,tfd)
+S3method(vec_cast.tfd,tfb)
+S3method(vec_cast.tfd,tfd)
+S3method(vec_ptype2.tfb,tfb)
+S3method(vec_ptype2.tfd,tfd)
 export("%inr%")
 export("arg<-")
 export("tf_evaluator<-")
@@ -156,6 +162,10 @@ export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
+export(vec_cast.tfb)
+export(vec_cast.tfd)
+export(vec_ptype2.tfb)
+export(vec_ptype2.tfd)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
@@ -205,6 +215,7 @@ importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,var)
+importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace)
