a few more @importFroms. also doc update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,10 +98,10 @@ S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
-S3method(vec_cast.tfb,tfb)
-S3method(vec_cast.tfb,tfd)
-S3method(vec_cast.tfd,tfb)
-S3method(vec_cast.tfd,tfd)
+S3method(vec_cast,tfb.tfb)
+S3method(vec_cast,tfb.tfd)
+S3method(vec_cast,tfd.tfb)
+S3method(vec_cast,tfd.tfd)
 S3method(vec_ptype2.tfb,tfb)
 S3method(vec_ptype2.tfd,tfd)
 export("%inr%")
@@ -200,8 +200,12 @@ importFrom(pillar,pillar_shaft)
 importFrom(pillar,type_sum)
 importFrom(pracma,savgol)
 importFrom(refund,fpca.sc)
+importFrom(rlang,"!!!")
+importFrom(rlang,"!!")
 importFrom(rlang,":=")
 importFrom(rlang,enexpr)
+importFrom(rlang,enquo)
+importFrom(rlang,enquos)
 importFrom(rlang,is_empty)
 importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
