--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ matrix:
   - r: devel
   - r: release
 
-r_github_packages:
-  - jimhester/covr
+r_packages:
+  - covr
 
 after_success:
   - Rscript -e 'pkgdown::build_site()'
