cleaner / more complete `vctrs` implementation for `tfd_reg` and `tfd_irreg`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,12 +98,20 @@ S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
-S3method(vec_cast.tfb,tfb)
-S3method(vec_cast.tfb,tfd)
-S3method(vec_cast.tfd,tfb)
-S3method(vec_cast.tfd,tfd)
+S3method(vec_cast,tfd_irreg)
+S3method(vec_cast,tfd_reg)
+S3method(vec_cast.tfd_irreg,tfd_irreg)
+S3method(vec_cast.tfd_irreg,tfd_reg)
+S3method(vec_cast.tfd_reg,tfd_irreg)
+S3method(vec_cast.tfd_reg,tfd_reg)
+S3method(vec_ptype2,tfd.tfd)
+S3method(vec_ptype2,tfd_irreg)
+S3method(vec_ptype2,tfd_reg)
 S3method(vec_ptype2.tfb,tfb)
-S3method(vec_ptype2.tfd,tfd)
+S3method(vec_ptype2.tfd_irreg,tfd_irreg)
+S3method(vec_ptype2.tfd_irreg,tfd_reg)
+S3method(vec_ptype2.tfd_reg,tfd_irreg)
+S3method(vec_ptype2.tfd_reg,tfd_reg)
 export("%inr%")
 export("arg<-")
 export("tf_evaluator<-")
@@ -162,10 +170,10 @@ export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
-export(vec_cast.tfb)
-export(vec_cast.tfd)
-export(vec_ptype2.tfb)
-export(vec_ptype2.tfd)
+export(vec_cast.tfd_irreg)
+export(vec_cast.tfd_reg)
+export(vec_ptype2.tfd_irreg)
+export(vec_ptype2.tfd_reg)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
@@ -173,6 +181,7 @@ import(memoise)
 import(mgcv)
 import(purrr)
 import(tidyr)
+import(vctrs)
 import(zoo)
 importFrom(GGally,rescale01)
 importFrom(GGally,rescale11)
