vec_ptype2.tfd.tfd isn't really an s3 generic (that gets used by vctrs, anyway) so renamed to vec_ptype2_tfd_tfd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,7 +104,6 @@ S3method(vec_cast.tfd_irreg,tfd_irreg)
 S3method(vec_cast.tfd_irreg,tfd_reg)
 S3method(vec_cast.tfd_reg,tfd_irreg)
 S3method(vec_cast.tfd_reg,tfd_reg)
-S3method(vec_ptype2,tfd.tfd)
 S3method(vec_ptype2,tfd_irreg)
 S3method(vec_ptype2,tfd_reg)
 S3method(vec_ptype2.tfb,tfb)
@@ -174,6 +173,7 @@ export(vec_cast.tfd_irreg)
 export(vec_cast.tfd_reg)
 export(vec_ptype2.tfd_irreg)
 export(vec_ptype2.tfd_reg)
+export(vec_ptype2_tfd_tfd)
 import(checkmate)
 import(dplyr)
 import(ggplot2)
