added vec_cast and vec_ptype functions for tfb classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,15 +98,25 @@ S3method(tfd,numeric)
 S3method(tfd,tf)
 S3method(var,default)
 S3method(var,tf)
+S3method(vec_cast,tfb_fpc)
+S3method(vec_cast,tfb_spline)
 S3method(vec_cast,tfd_irreg)
 S3method(vec_cast,tfd_reg)
+S3method(vec_cast.tfb_fpc,tfb_spline)
+S3method(vec_cast.tfb_spline,tfb_fpc)
+S3method(vec_cast.tfb_spline,tfb_spline)
 S3method(vec_cast.tfd_irreg,tfd_irreg)
 S3method(vec_cast.tfd_irreg,tfd_reg)
 S3method(vec_cast.tfd_reg,tfd_irreg)
 S3method(vec_cast.tfd_reg,tfd_reg)
+S3method(vec_ptype2,tfb_fpc)
+S3method(vec_ptype2,tfb_spline)
 S3method(vec_ptype2,tfd_irreg)
 S3method(vec_ptype2,tfd_reg)
-S3method(vec_ptype2.tfb,tfb)
+S3method(vec_ptype2.tfb_fpc,tfb_fpc)
+S3method(vec_ptype2.tfb_fpc,tfb_spline)
+S3method(vec_ptype2.tfb_spline,tfb_fpc)
+S3method(vec_ptype2.tfb_spline,tfb_spline)
 S3method(vec_ptype2.tfd_irreg,tfd_irreg)
 S3method(vec_ptype2.tfd_irreg,tfd_reg)
 S3method(vec_ptype2.tfd_reg,tfd_irreg)
@@ -169,10 +179,14 @@ export(tfb)
 export(tfb_fpc)
 export(tfd)
 export(var)
+export(vec_cast.tfb_spline)
 export(vec_cast.tfd_irreg)
 export(vec_cast.tfd_reg)
+export(vec_ptype2.tfb_fpc)
+export(vec_ptype2.tfb_spline)
 export(vec_ptype2.tfd_irreg)
 export(vec_ptype2.tfd_reg)
+export(vec_ptype2_tfb_tfb)
 export(vec_ptype2_tfd_tfd)
 import(checkmate)
 import(dplyr)
