--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ S3method(vec_cast,tfb_fpc)
 S3method(vec_cast,tfb_spline)
 S3method(vec_cast,tfd_irreg)
 S3method(vec_cast,tfd_reg)
+S3method(vec_cast.tfb_fpc,tfb_fpc)
 S3method(vec_cast.tfb_fpc,tfb_spline)
 S3method(vec_cast.tfb_spline,tfb_fpc)
 S3method(vec_cast.tfb_spline,tfb_spline)
