--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,11 +13,10 @@ reference:
       - tfb_fpc
       - fpc_wsvd
 
-  - title: "Concatenation, evaluation and indexing"
+  - title: "Evaluation and indexing"
     desc: "Accessing, appending, evaluating and overwriting functional data objects"
     contents: 
       - index.tf
-      - c.tf
       - tf_approx_linear
       - tf_evaluate
       
@@ -31,10 +30,8 @@ reference:
        
   - title: "Differentiation & integration"
     contents:
-       - tf_derive.tfd
-       - tf_derive.tfb
-       - tf_integrate.tfd
-       - tf_integrate.tfb
+       - tf_derive
+       - tf_integrate
        
   - title: "Wrangling"
     desc: "Reshaping and transforming tf-objects inside data frames"
@@ -63,7 +60,8 @@ reference:
       - tf_arg
       - tf_rgp
       - tf_jiggle
-  
+
+
   - title: "Data Sets"
     desc: "Functional data sets"
     contents:
@@ -93,7 +91,7 @@ navbar:
       href: articles/x02_Conversion.html
     - text: Data Wrangling
       href: articles/x03_Data_Wrangling.html
-    - text: Visulalization
+    - text: Visualization
       href: articles/x04_Visualization.html
     - text: Advice for Developers
       href: articles/x05_Advice.html
