--- a/NAMESPACE
+++ b/NAMESPACE
@@ -243,6 +243,7 @@ importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace)
+importFrom(tibble,tibble)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
