ensure `tf_unnest` does something reasonable if `cols` isn't provided
borrowed code / idea from `tidyr::unnest`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,10 +225,13 @@ importFrom(pillar,type_sum)
 importFrom(pracma,savgol)
 importFrom(refund,fpca.sc)
 importFrom(rlang,":=")
+importFrom(rlang,`!!!`)
 importFrom(rlang,enexpr)
+importFrom(rlang,expr_text)
 importFrom(rlang,is_empty)
 importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
+importFrom(rlang,syms)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,gaussian)
