explicit not global imports from dplyr
... to get rid of "conflict with vctrs::data_frame" warning

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -190,7 +190,6 @@ export(vec_ptype2.tfd_reg)
 export(vec_ptype2_tfb_tfb)
 export(vec_ptype2_tfd_tfd)
 import(checkmate)
-import(dplyr)
 import(ggplot2)
 import(memoise)
 import(mgcv)
@@ -201,6 +200,26 @@ import(zoo)
 importFrom(GGally,rescale01)
 importFrom(GGally,rescale11)
 importFrom(digest,digest)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,desc)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,id)
+importFrom(dplyr,lead)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n_distinct)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,row_number)
+importFrom(dplyr,select)
+importFrom(dplyr,select_if)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarise_all)
+importFrom(dplyr,summarize)
+importFrom(dplyr,summarize_all)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,Geom)
 importFrom(ggplot2,Stat)
 importFrom(ggplot2,ggproto)
