export more converter methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,11 @@ S3method(Summary,tf)
 S3method(as.data.frame,tfb)
 S3method(as.data.frame,tfd)
 S3method(as.function,tf)
+S3method(as.matrix,tfb)
 S3method(as.matrix,tfd)
+S3method(as.tfd,default)
+S3method(as.tfd_irreg,tfd_irreg)
+S3method(as.tfd_irreg,tfd_reg)
 S3method(coef,tfb)
 S3method(cummax,tfb)
 S3method(cummax,tfd)
@@ -132,6 +136,7 @@ export(StatCapellini)
 export(StatTf)
 export(as.tfb)
 export(as.tfd)
+export(as.tfd_irreg)
 export(funplot)
 export(geom_capelini)
 export(geom_capellini)
