doc fix, version bump

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -274,6 +274,7 @@ importFrom(tibble,tibble)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
+importFrom(tools,capture.output)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,modifyList)
