--- a/NAMESPACE
+++ b/NAMESPACE
@@ -274,7 +274,7 @@ importFrom(tibble,tibble)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
-importFrom(tools,capture.output)
+importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,modifyList)
