make namespace more complete&consistent

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ S3method("==",tfb)
 S3method("==",tfd)
 S3method("[",tf)
 S3method("[<-",tf)
-S3method("arg<-",tfd_irreg)
-S3method("arg<-",tfd_reg)
+S3method("tf_arg<-",tfd_irreg)
+S3method("tf_arg<-",tfd_reg)
 S3method(Math,tfb)
 S3method(Math,tfd)
 S3method(Ops,tf)
@@ -76,6 +76,9 @@ S3method(tf_integrate,"function")
 S3method(tf_integrate,default)
 S3method(tf_integrate,tfb)
 S3method(tf_integrate,tfd)
+S3method(tf_interpolate,tfb)
+S3method(tf_interpolate,tfd_irreg)
+S3method(tf_interpolate,tfd_reg)
 S3method(tf_smooth,default)
 S3method(tf_smooth,tfb)
 S3method(tf_smooth,tfd)
@@ -127,7 +130,7 @@ S3method(vec_ptype2.tfd_irreg,tfd_reg)
 S3method(vec_ptype2.tfd_reg,tfd_irreg)
 S3method(vec_ptype2.tfd_reg,tfd_reg)
 export("%inr%")
-export("arg<-")
+export("tf_arg<-")
 export("tf_evaluator<-")
 export(GeomCapellini)
 export(GeomMeatballs)
@@ -149,6 +152,8 @@ export(in_range)
 export(is_irreg)
 export(is_tf)
 export(is_tfb)
+export(is_tfb_fpc)
+export(is_tfb_spline)
 export(is_tfd)
 export(sd)
 export(stat_capellini)
@@ -171,6 +176,7 @@ export(tf_evaluations)
 export(tf_evaluator)
 export(tf_gather)
 export(tf_integrate)
+export(tf_interpolate)
 export(tf_jiggle)
 export(tf_nest)
 export(tf_resolution)
