--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,11 +150,14 @@ export(geom_spaghetti)
 export(gglasagna)
 export(in_range)
 export(is_irreg)
+export(is_reg)
 export(is_tf)
 export(is_tfb)
 export(is_tfb_fpc)
 export(is_tfb_spline)
 export(is_tfd)
+export(is_tfd_irreg)
+export(is_tfd_reg)
 export(sd)
 export(stat_capellini)
 export(stat_tf)
