--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,8 +77,7 @@ S3method(tf_integrate,default)
 S3method(tf_integrate,tfb)
 S3method(tf_integrate,tfd)
 S3method(tf_interpolate,tfb)
-S3method(tf_interpolate,tfd_irreg)
-S3method(tf_interpolate,tfd_reg)
+S3method(tf_interpolate,tfd)
 S3method(tf_smooth,default)
 S3method(tf_smooth,tfb)
 S3method(tf_smooth,tfd)
