--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,8 +14,7 @@ S3method(Ops,tf)
 S3method(Ops,tfb)
 S3method(Ops,tfd)
 S3method(Summary,tf)
-S3method(as.data.frame,tfb)
-S3method(as.data.frame,tfd)
+S3method(as.data.frame,tf)
 S3method(as.function,tf)
 S3method(as.matrix,tfb)
 S3method(as.matrix,tfd)
@@ -81,6 +80,8 @@ S3method(tf_interpolate,tfd)
 S3method(tf_smooth,default)
 S3method(tf_smooth,tfb)
 S3method(tf_smooth,tfd)
+S3method(tf_unnest,data.frame)
+S3method(tf_unnest,tf)
 S3method(tf_zoom,tfb)
 S3method(tf_zoom,tfb_fpc)
 S3method(tf_zoom,tfd)
@@ -279,6 +280,7 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace)
 importFrom(tibble,tibble)
+importFrom(tidyr,unnest)
 importFrom(tidyselect,quos)
 importFrom(tidyselect,vars_pull)
 importFrom(tidyselect,vars_select)
