--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ S3method(cumprod,tfd)
 S3method(cumsum,tfb)
 S3method(cumsum,tfd)
 S3method(format,tf)
+S3method(fpc_wsvd,data.frame)
+S3method(fpc_wsvd,matrix)
 S3method(is.finite,tf)
 S3method(is.na,tf)
 S3method(is.na,tfd_irreg)
