--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: tidyfun
 Title: Tools for Tidy Functional Data
 Version: 0.0.95
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("aut")), person("Julia", "Wrobel", role = c("aut")))
-Description: Provides S3 classes and methods for tidy functional data.
-Depends: R (>= 3.4)
+Description: Provides S3 classes and methods for representing, visualizing and wrangling tidy functional data.
+Depends: R (>= 4.1)
 Imports:
   checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, methods, mvtnorm, mgcv, 
   modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tibble, 
