--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,7 @@ S3method(vec_ptype2.tfd_reg,tfd_irreg)
 S3method(vec_ptype2.tfd_reg,tfd_reg)
 export("%inr%")
 export("tf_arg<-")
+export("tf_domain<-")
 export("tf_evaluator<-")
 export(GeomCapellini)
 export(GeomMeatballs)
