--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: tidyfun
 Title: Tools for Tidy Functional Data
-Version: 0.0.95
+Version: 0.0.96
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("aut")), person("Julia", "Wrobel", role = c("aut")))
 Description: Provides S3 classes and methods for representing, visualizing and wrangling tidy functional data.
 Depends: R (>= 4.1)
 Imports:
-  checkmate, digest, dplyr, GGally, ggplot2, grid, memoise, methods, mvtnorm, mgcv, 
+  checkmate, digest, dplyr, GGally, ggplot2, grid, methods, mvtnorm, mgcv, 
   modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tibble, 
   tidyselect, tidyr (>= 1.0.0), vctrs (>= 0.2.4), zoo
 License: MIT + file LICENSE
