--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,11 @@ Title: Tools for Tidy Functional Data
 Version: 0.0.96
 Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("aut")), person("Julia", "Wrobel", role = c("aut")))
 Description: Provides S3 classes and methods for representing, visualizing and wrangling tidy functional data.
-Depends: R (>= 4.1)
+Depends: R (>= 4.1), tf
 Imports:
-  checkmate, digest, dplyr, GGally, ggplot2, grid, methods, mvtnorm, mgcv, 
+  checkmate, dplyr, GGally, ggplot2, grid, 
   modelr, pillar, pracma, purrr, refund, rlang, stats, stringr, tibble, 
-  tidyselect, tidyr (>= 1.0.0), vctrs (>= 0.2.4), zoo
+  tidyselect, tidyr (>= 1.0.0) 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -27,40 +27,6 @@ Suggests:
     viridisLite,
     covr
 Roxygen: list(markdown = TRUE)
-Collate:
-    'approx.R'
-    'brackets.R'
-    'calculus.R'
-    'convert.R'
-    'datasets.R'
-    'depth.R'
-    'evaluate.R'
-    'geom-capellini.R'
-    'geom-spaghetti.R'
-    'gglasagna.R'
-    'globals.R'
-    'graphics.R'
-    'interpolate.R'
-    'ops.R'
-    'math.R'
-    'methods.R'
-    'print-format.R'
-    'rng.R'
-    'smooth.R'
-    'summarize.R'
-    'tfb-spline.R'
-    'tfb-class.R'
-    'tfd-class.R'
-    'tf-s4.R'
-    'tfb-fpc-utils.R'
-    'tfb-fpc.R'
-    'tfb-spline-utils.R'
-    'tidyfun-package.r'
-    'tidyr.R'
-    'tidyverse-vctrs.R'
-    'utils.R'
-    'where.R'
-    'zoom.R'
 VignetteBuilder: knitr
 URL: https://github.com/tidyfun/tidyfun,
     https://tidyfun.github.io/tidyfun
