my geom-errorband update broke installation from GH; hoping this fixes that ..

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,9 +136,11 @@ export("tf_arg<-")
 export("tf_domain<-")
 export("tf_evaluator<-")
 export(GeomCapellini)
+export(GeomErrorband)
 export(GeomMeatballs)
 export(GeomSpaghetti)
 export(StatCapellini)
+export(StatErrorband)
 export(StatTf)
 export(as.tfb)
 export(as.tfd)
@@ -148,6 +150,7 @@ export(geom_capelini)
 export(geom_capellini)
 export(geom_cappelini)
 export(geom_cappellini)
+export(geom_errorband)
 export(geom_meatballs)
 export(geom_spaghetti)
 export(gglasagna)
@@ -163,6 +166,7 @@ export(is_tfd_irreg)
 export(is_tfd_reg)
 export(sd)
 export(stat_capellini)
+export(stat_errorband)
 export(stat_tf)
 export(tf_anywhere)
 export(tf_approx_fill_extend)
