--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,7 @@ Imports:
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Suggests: 
     data.table,
     fda,
@@ -36,6 +36,7 @@ Collate:
     'depth.R'
     'evaluate.R'
     'geom-capellini.R'
+    'geom-errorband.R'
     'geom-spaghetti.R'
     'gglasagna.R'
     'globals.R'
