[WIP] fixing namespace issues

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,9 +31,13 @@ export(tf_interpolate)
 export(tf_nest)
 export(tf_spread)
 export(tf_unnest)
+import(checkmate)
+import(dplyr)
 import(ggplot2)
+import(tf)
 importFrom(GGally,rescale01)
 importFrom(GGally,rescale11)
+importFrom(dplyr,pull)
 importFrom(ggplot2,Geom)
 importFrom(ggplot2,Stat)
 importFrom(ggplot2,aes)
@@ -47,8 +51,11 @@ importFrom(modelr,seq_range)
 importFrom(pillar,obj_sum)
 importFrom(pillar,pillar_shaft)
 importFrom(pillar,type_sum)
+importFrom(purrr,map)
+importFrom(purrr,map_lgl)
 importFrom(rlang,":=")
 importFrom(rlang,`!!!`)
+importFrom(rlang,`%||%`)
 importFrom(rlang,enexpr)
 importFrom(rlang,enquos)
 importFrom(rlang,expr_text)
@@ -56,6 +63,7 @@ importFrom(rlang,is_empty)
 importFrom(rlang,quo_name)
 importFrom(rlang,quo_text)
 importFrom(rlang,syms)
+importFrom(stats,median)
 importFrom(stringr,str_replace)
 importFrom(tibble,tibble)
 importFrom(tidyr,unnest)
