--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,23 +8,19 @@ S3method(tf_interpolate,tfd)
 S3method(tf_unnest,data.frame)
 S3method(tf_unnest,tf)
 export(GeomCapellini)
-export(GeomErrorband)
 export(GeomMeatballs)
 export(GeomSpaghetti)
 export(StatCapellini)
-export(StatErrorband)
 export(StatTf)
 export(funplot)
 export(geom_capelini)
 export(geom_capellini)
 export(geom_cappelini)
 export(geom_cappellini)
-export(geom_errorband)
 export(geom_meatballs)
 export(geom_spaghetti)
 export(gglasagna)
 export(stat_capellini)
-export(stat_errorband)
 export(stat_tf)
 export(tf_gather)
 export(tf_interpolate)
@@ -53,6 +49,7 @@ importFrom(pillar,pillar_shaft)
 importFrom(pillar,type_sum)
 importFrom(purrr,map)
 importFrom(purrr,map_lgl)
+importFrom(purrr,pmap)
 importFrom(rlang,":=")
 importFrom(rlang,`!!!`)
 importFrom(rlang,`%||%`)
