--- a/.github/workflows/check-release.yaml
+++ b/.github/workflows/check-release.yaml
@@ -20,7 +20,10 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           use-public-rspm: true
-
+      
+      - name: install-tf
+        run: Rscript -e "install.packages('remotes'); remotes::install_github('tidyfun/tf')"
+      
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: rcmdcheck
