--- a/.github/workflows/full-check.yaml
+++ b/.github/workflows/full-check.yaml
@@ -42,5 +42,6 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: rcmdcheck
+          cache-version: 2
 
       - uses: r-lib/actions/check-r-package@v1
