--- a/.github/workflows/quick-check.yaml
+++ b/.github/workflows/quick-check.yaml
@@ -24,5 +24,6 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v1
         with:
           extra-packages: rcmdcheck
+          cache-version: 2
 
       - uses: r-lib/actions/check-r-package@v1
