--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -13,7 +13,7 @@ reference:
   desc: Accessing, appending, evaluating and overwriting functional data objects
   contents:
   - tf::tfbrackets
-  - tf::tf_approx
+  - tf::tf_approx_linear
   - tf::tf_evaluate
   - tf::tf_interpolate
 - title: Arithmetic, logical and summary functions
@@ -22,10 +22,11 @@ reference:
   - tf::Ops.tf
   - tf::tfsummaries
   - tf::tf_depth
-- title: Differentiation & integration
+- title: Differentiation, integration and simple smoothing
   contents:
   - tf::tf_derive
   - tf::tf_integrate
+  - tf::tf_smooth
 - title: Wrangling
   desc: Reshaping and transforming tf-objects inside data frames
   contents:
@@ -33,6 +34,7 @@ reference:
   - tf_spread
   - tf_nest
   - tf_unnest
+  - tf_evaluate.data.frame
 - title: Visualization & Display
   desc: Graphics functions and print formats
   contents:
@@ -40,19 +42,22 @@ reference:
   - geom_spaghetti
   - gglasagna
   - geom_capellini
-  - print.tf
+  - tf::print.tf
   - type_sum.tf
-- title: Utilities
-  desc: Utility functions
+- title: Querying functional data
+  desc: Locating functional features like peaks or zero-crossings
   contents:
   - tf::tf_where
   - tf::tf_zoom
-  - tf::tf_smooth
+- title: Utilities
+  desc: Utility functions
+  contents:
   - tf::tf_arg
+- title: Generating random functional data
+  desc: RNGs for curves
+  contents:
   - tf::tf_rgp
   - tf::tf_jiggle
-  - tidyfun
-  - tf::vctrs 
 - title: Data Sets
   desc: Functional data sets
   contents:
