--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,7 @@ Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com"
 Description: Representing, visualizing, describing and wrangling tidy functional data, based on {tf}.
 Depends: R (>= 4.1), tf
 Imports:
-  checkmate, dplyr, GGally, ggplot2, grid, 
-  modelr, pillar, purrr, rlang, stats, stringr, tibble, 
+  dplyr, GGally, ggplot2, grid, pillar, purrr, rlang, stringr, tibble, 
   tidyselect, tidyr (>= 1.0.0) 
 License: MIT + file LICENSE
 Encoding: UTF-8
