--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -63,6 +63,7 @@ reference:
   contents:
   - chf_df
   - dti_df
+  - tidyfun
 articles:
 - title: Articles
   desc: Articles & vignettes for tidyfun
