--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,18 +6,22 @@ S3method(tf_evaluate,data.frame)
 S3method(tf_unnest,data.frame)
 S3method(tf_unnest,tf)
 export(GeomCapellini)
+export(GeomErrorband)
 export(GeomMeatballs)
 export(GeomSpaghetti)
 export(StatCapellini)
+export(StatErrorband)
 export(StatTf)
 export(geom_capelini)
 export(geom_capellini)
 export(geom_cappelini)
 export(geom_cappellini)
+export(geom_errorband)
 export(geom_meatballs)
 export(geom_spaghetti)
 export(gglasagna)
 export(stat_capellini)
+export(stat_errorband)
 export(stat_tf)
 export(tf_gather)
 export(tf_nest)
