--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,38 @@
 Package: tidyfun
 Title: Tools for Tidy Functional Data
 Version: 0.0.971
-Authors@R: c(person("Fabian", "Scheipl", email = "fabian.scheipl@googlemail.com", role = c("aut", "cre")), person("Jeff", "Goldsmith", role = c("aut")), person("Julia", "Wrobel", role = c("aut")))
-Description: Representing, visualizing, describing and wrangling tidy functional data, based on {tf}.
-Depends: R (>= 4.1), tf
-Imports:
-  dplyr, GGally, ggplot2, grid, pillar, purrr, rlang, stringr, tibble, 
-  tidyselect, tidyr (>= 1.0.0) 
+Authors@R: c(
+    person("Fabian", "Scheipl", , "fabian.scheipl@googlemail.com", role = c("aut", "cre")),
+    person("Jeff", "Goldsmith", role = "aut"),
+    person("Julia", "Wrobel", role = "aut")
+  )
+Description: Representing, visualizing, describing and wrangling tidy
+    functional data, based on {tf}.
 License: MIT + file LICENSE
-Encoding: UTF-8
-LazyData: true
-RoxygenNote: 7.2.3
+URL: https://github.com/tidyfun/tidyfun,
+    https://tidyfun.github.io/tidyfun/
+BugReports: https://github.com/tidyfun/tidyfun/issues
+Depends: 
+    R (>= 4.1),
+    tf
+Imports:
+    dplyr,
+    GGally,
+    ggplot2,
+    grid,
+    pillar,
+    purrr,
+    rlang,
+    stringr,
+    tibble,
+    tidyr (>= 1.0.0),
+    tidyselect
 Suggests: 
+    covr,
     data.table,
     fda,
-    janitor,
     gridExtra,
+    janitor,
     knitr,
     maps,
     mgcv,
@@ -25,12 +42,12 @@ Suggests:
     SemiPar,
     testthat,
     tidyverse,
-    viridisLite,
-    covr
-Roxygen: list(markdown = TRUE)
+    viridisLite
+VignetteBuilder: 
+    knitr
 Remotes: 
     tidyfun/tf
-VignetteBuilder: knitr
-URL: https://github.com/tidyfun/tidyfun,
-    https://tidyfun.github.io/tidyfun/
-BugReports: https://github.com/tidyfun/tidyfun/issues
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.2.3
