refactor: move to testthat version 3

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,7 @@ Suggests:
     rmarkdown,
     scales,
     SemiPar,
-    testthat,
+    testthat (>= 3.0.0),
     tidyverse,
     viridisLite
 VignetteBuilder: 
@@ -51,3 +51,4 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
+Config/testthat/edition: 3
