--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# MacOS
-.DS_Store
-
 # History files
 .Rhistory
 .Rapp.history
@@ -50,3 +47,6 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# macOS
+.DS_Store
